--- a/src/index.html
+++ b/src/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- <link rel="stylesheet" href="dist/main.css"> -->
-    <title>Webpack 2 Basics</title>
+    <title>Webpack Basics</title>
 </head>
 
 <body>
-    <h1>Learn Webpack 2</h1>
+    <h1>Learn Webpack</h1>
     <div>
         <img src="/img/awesome_webpack.png" alt="webpack" />
     </div>
-    <button id="randomInt">A Random Integer</button>
-    <button id="randomRange">A Random Integer in a Range</button>
+    <button id="randomInt">Random One</button>
+    <button id="randomRange">Random Two </button>
     <p id="outputParagraph">Hide</p>
     <!-- <script src="dist/bundle.js"></script> -->
 </body>
